--- a/sass/openeyes/components/sem/elements/_element-right-left.scss
+++ b/sass/openeyes/components/sem/elements/_element-right-left.scss
@@ -8,17 +8,10 @@
 			display:flex;
 			align-items:flex-start;			
 			justify-content:space-between;
-			
-			// wrapper for Eye Lat icons
-			.eye-icon-header {
-				text-align: center;
-				margin:0 0 8px 0;
-			}
 
 			// these are were tricky to get right
 			// had to tweak the 'left' side to get the + icon
 			// to line up with the full width + icon
-			
 			.right-eye {
 				width:50%; 
 				padding-left: 10px; 	// indent data
@@ -32,7 +25,7 @@
 			
 			// need to be able to deactivate a side
 			// the system will do this if a user shouldn't
-			// be using this data
+			// be using this eye side data
 			.right-eye, 
 			.left-eye {
 				&.deactivate {
@@ -48,15 +41,24 @@
 					  left:0;
 					  width:100%;
 					  height:100%;
-					  // add right arrow to the backround:
+					  // add striped grey overlay pattern:
 					  background-position:top left;
 					  background-repeat: repeat;
 					  background-size:20px;
-					  background-image:url( "../svg/in-css/patterns/pattern1.svg" );
-					  overflow:auto; // IE: stop under text selection fix
+					  background-image:url( svg-path("patterns/pattern1") );
+					  // IE: stop under text selection fix
+					  overflow:auto; 
 					}
 				}
 			}
+			
+			// wrapper for Eye Lat icons header.
+			// used occasionally to show a large Eye Lat icon on each Eye-sides
+			.eye-icon-header {
+				text-align: center;
+				margin:0 0 8px 0;
+			}
+			
 		}
 				
 	}
